--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
     <div class="works">
       <ul>
-        <li><a href="#">Домашня робота №1</a></li>
-        <li><a href="#">Домашня робота №2</a></li>
-        <li><a href="#">Домашня робота №3</a></li>
+       <li><a href="works/Anna_Khodak_algoritmus01_faktoriál.drawio" target="_blank">Факторіал (блок-схема)</a></li>
+        <li><a href="works/min-max.png" target="_blank">Найменше та найбільше число</a></li>
+        <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
