--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="works">
       <ul>
-       <li><a href="works/Anna_Khodak_algoritmus01_faktoriál.drawio" target="_blank">Факторіал (блок-схема)</a></li>
+       <li><a href="works/Anna_Khodak_algoritmus01_faktoriál.drawio.png" target="_blank">Факторіал (блок-схема)</a></li>
         <li><a href="works/min-max.png" target="_blank">Найменше та найбільше число</a></li>
         <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
       </ul>
@@ -21,4 +21,5 @@
   </div>
 </body>
 </html>
+
 
