--- a/index.html
+++ b/index.html
@@ -8,18 +8,28 @@
 </head>
 <body>
   <div class="container">
-    <h1>Твоє ім’я</h1>
+    <h1>Твоє Ім'я</h1>
     <p class="subtitle">Мої домашні роботи</p>
 
     <div class="works">
-      <ul>
-       <li><a href="works/Anna_Khodak_algoritmus01_faktoriál.drawio.png" target="_blank">Факторіал (блок-схема)</a></li>
-        <li><a href="works/min-max.png" target="_blank">Найменше та найбільше число</a></li>
-        <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
-      </ul>
+      <h2>Факторіал (блок-схема)</h2>
+      <a href="works/Anna_Khodak_algoritmus01_faktorial.png" target="_blank">
+        <img src="works/Anna_Khodak_algoritmus01_faktorial.png" alt="Факторіал" width="600">
+      </a>
+
+      <h2>Найменше та найбільше число</h2>
+      <a href="works/min-max.png" target="_blank">
+        <img src="works/min-max.png" alt="Min-Max" width="600">
+      </a>
+
+      <h2>Парні числа</h2>
+      <a href="works/even-numbers.png" target="_blank">
+        <img src="works/even-numbers.png" alt="Парні числа" width="600">
+      </a>
     </div>
   </div>
 </body>
 </html>
+
 
 
