--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <div class="works">
       <h2>Факторіал (блок-схема)</h2>
-      <a href="works/Anna_Khodak_algoritmus01_faktorial.png" target="_blank">
-        <img src="works/Anna_Khodak_algoritmus01_faktorial.png" alt="Факторіал" width="600">
+      <a href="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" target="_blank">
+        <img src="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" alt="Факторіал" width="600">
       </a>
 
       <h2>Найменше та найбільше число</h2>
@@ -30,6 +30,7 @@
   </div>
 </body>
 </html>
+
 
 
 
