--- a/index.html
+++ b/index.html
@@ -12,24 +12,16 @@
     <p class="subtitle">Мої домашні роботи</p>
 
     <div class="works">
-      <h2>Факторіал (блок-схема)</h2>
-      <a href="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" target="_blank">
-        <img src="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" alt="Факторіал" width="600">
-      </a>
-
-      <h2>Найменше та найбільше число</h2>
-      <a href="works/min-max.png" target="_blank">
-        <img src="works/min-max.png" alt="Min-Max" width="600">
-      </a>
-
-      <h2>Парні числа</h2>
-      <a href="works/even-numbers.png" target="_blank">
-        <img src="works/even-numbers.png" alt="Парні числа" width="600">
-      </a>
+      <ul>
+        <li><a href="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" target="_blank">Факторіал (блок-схема)</a></li>
+        <li><a href="works/min-max.png" target="_blank">Найменше та найбільше число</a></li>
+        <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
+      </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
