--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <div class="works">
       <ul>
         <li><a href="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" target="_blank">Факторіал (блок-схема)</a></li>
-        <li><a href="works/min-max.png" target="_blank">Найменше та найбільше число</a></li>
+        <li><a href="works/Anna_Khodak_algoritmus02_maxmin.drawio.png" target="_blank">Найменше та найбільше число</a></li>
         <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
