--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="works">
       <ul>
-        <li><a href="works/Anna_Khodak_algoritmus01_faktorial.drawio.png" target="_blank">Факторіал (блок-схема)</a></li>
+        <li><a href="works/Anna_Khodak_algoritmus01_faktorial.png" target="_blank">Факторіал (блок-схема)</a></li>
         <li><a href="works/Anna_Khodak_algoritmus02_maxmin.png" target="_blank">Найменше та найбільше число</a></li>
         <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
       </ul>
@@ -21,6 +21,7 @@
   </div>
 </body>
 </html>
+
 
 
 
