--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       <ul>
         <li><a href="works/Anna_Khodak_algoritmus01_faktorial.png" target="_blank">Факторіал (блок-схема)</a></li>
         <li><a href="works/Anna_Khodak_algoritmus02_maxmin.png" target="_blank">Найменше та найбільше число</a></li>
-        <li><a href="works/even-numbers.png" target="_blank">Парні числа</a></li>
+        <li><a href="works/Anna_Khodak_algoritmus03_parne.png" target="_blank">Парні числа</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
