--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Мої домашні роботи</title>
+  <title>Moje domace ulohy</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Твоє Ім'я</h1>
+    <h1>Anna Khodak</h1>
     <p class="subtitle">Мої домашні роботи</p>
 
     <div class="works">
       <ul>
-        <li><a href="works/Anna_Khodak_algoritmus01_faktorial.png" target="_blank">Факторіал (блок-схема)</a></li>
-        <li><a href="works/Anna_Khodak_algoritmus02_maxmin.png" target="_blank">Найменше та найбільше число</a></li>
-        <li><a href="works/Anna_Khodak_algoritmus03_parne.png" target="_blank">Парні числа</a></li>
+        <li><a href="works/Anna_Khodak_algoritmus01_faktorial.png" target="_blank">Faktorial</a></li>
+        <li><a href="works/Anna_Khodak_algoritmus02_maxmin.png" target="_blank">Min a max</a></li>
+        <li><a href="works/Anna_Khodak_algoritmus03_parne.png" target="_blank">Parne cisla</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
