--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Anna Khodak</h1>
-    <p class="subtitle">Мої домашні роботи</p>
+    <p class="subtitle">Moje domace ulohy</p>
 
     <div class="works">
       <ul>
@@ -21,6 +21,7 @@
   </div>
 </body>
 </html>
+
 
 
 
