--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         <li><a href="works/Anna_Khodak_algoritmus02_maxmin.png" target="_blank">Min a max</a></li>
         <li><a href="works/Anna_Khodak_algoritmus03_parne.png" target="_blank">Parne cisla</a></li>
         <li><a href="works/Anna_Khodak_web_cv_4.html" target="_blank">Boeing 747</a></li>
-        <li><a href="works/Anna_Khodak_prezencna_listina.html" target="_blank">Домашня робота №2</a></li>
+        <li><a href="works/Anna_Khodak_prezencna_listina.html" target="_blank">Prezencna listina</a></li>
+        <li><a href="works/vrtulniki/Anna_Khodak_vrtulniky.html" target="_blank">Vrtulniki</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
+
 
 
 
