--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <li><a href="works/Anna_Khodak_web_cv_4.html" target="_blank">Boeing 747</a></li>
         <li><a href="works/Anna_Khodak_prezencna_listina.html" target="_blank">Prezencna listina</a></li>
         <li><a href="works/vrtulniki/Anna_Khodak_vrtulniky.html" target="_blank">Vrtulniki</a></li>
+        <li><a href="works/karta/Anna_Khodak_karta.html" target="_blank">CV</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
