--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         <li><a href="works/Anna_Khodak_prezencna_listina.html" target="_blank">Prezencna listina</a></li>
         <li><a href="works/vrtulniki/Anna_Khodak_vrtulniky.html" target="_blank">Vrtulniki</a></li>
         <li><a href="works/karta/Anna_Khodak_karta.html" target="_blank">CV</a></li>
-        <li><a href="works/CSS/index.html" target="_blank">CV</a></li>
+        <li><a href="works/CSS/index.html" target="_blank">CSS</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
