--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <li><a href="works/vrtulniki/Anna_Khodak_vrtulniky.html" target="_blank">Vrtulniki</a></li>
         <li><a href="works/karta/Anna_Khodak_karta.html" target="_blank">CV</a></li>
         <li><a href="works/CSS/index.html" target="_blank">CSS</a></li>
+        <li><a href="works/Karta CSS/Anna_Khodak_karta_CSS.html" target="_blank">Karta CSS</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
