--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
         <li><a href="works/Anna_Khodak_prezencna_listina.html" target="_blank">Prezencna listina</a></li>
         <li><a href="works/vrtulniki/Anna_Khodak_vrtulniky.html" target="_blank">Vrtulniki</a></li>
         <li><a href="works/karta/Anna_Khodak_karta.html" target="_blank">CV</a></li>
-        <li><a href="works/CSS/index.html" target="_blank">CSS</a></li>
+        <li><a href="works/CSS_1/Anna_Khodak_CSS_my.html" target="_blank">CSS - my design</a></li>
+        <li><a href="works/CSS_2/Anna_Khodak_CSS_menu.html" target="_blank">CSS - sablona</a></li>
         <li><a href="works/Karta CSS/Anna_Khodak_karta_CSS.html" target="_blank">Karta CSS</a></li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
