--- a/works/CSS_2/Anna_Khodak_CSS_menu.html
+++ b/works/CSS_2/Anna_Khodak_CSS_menu.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Anna_Khodak_CSS</title>
+  <title>Anna_Khodak_CSS_menu.html</title>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -31,3 +31,4 @@
 </div>
 </body>
 </html>
+
