--- a/works/Karta CSS/Anna_Khodak_karta_CSS.html
+++ b/works/Karta CSS/Anna_Khodak_karta_CSS.html
@@ -9,10 +9,10 @@
   <h1>RESUME</h1>
   <div class="main-card">
     <div class="prof-details">
-      <img src="NANA.jpg" alt="Vladyslav Zlobin">
+      <img src="NANA.jpg" alt="Nana">
       <h2>PROFESSIONAL DETAILS</h2>
       <div class="prof-details-list">
-        <!-- <div><strong>NAME:</strong> Anna hodak</div> -->
+        <!-- <div><strong>NAME:</strong> Anna Khodak</div> -->
         <div><strong>AGE:</strong> 19 Years</div>
         <div><strong>LOCATION:</strong> Kosice, Slovakia</div>
         <div><strong>EXPERIENCE:</strong> 3 Years</div>
@@ -49,3 +49,4 @@
   </div>
 </body>
 </html>
+
