--- a/works/Form/Anna_Khodak_form.html
+++ b/works/Form/Anna_Khodak_form.html
@@ -2,12 +2,12 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>TvojePriezvisko TvojeMeno: Konkurz na pracovné miesto v leteckom podniku</title>
+  <title>Anna Khodak: Konkurz na pracovné miesto v leteckom podniku</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h2>Prihláška do konkurzu – letecký podnik</h2>
+  <h2>Konkurz na pracovné miesto v leteckom podniku</h2>
 
   <form action="upload.php" method="post" enctype="multipart/form-data">
 
@@ -24,7 +24,7 @@
         <tr>
           <td>Email:</td>
           <td><input type="email" name="email" placeholder="napr. meno@email.sk" required></td>
-          <td>Mobil:</td>
+          <td>Tel. čislo:</td>
           <td><input type="tel" name="mobil" placeholder="09xxxxxxxx" pattern="[0-9]{9}" required></td>
         </tr>
         <tr>
@@ -120,7 +120,7 @@
         </tr>
         <tr>
           <td colspan="4">
-            <label><input type="checkbox" name="suhlas" required> Súhlasím so spracovaním osobných údajov podľa GDPR</label>
+            <label><input type="checkbox" name="suhlas" required> Súhlasím so spracovaním osobných údajov</label>
           </td>
         </tr>
       </table>
@@ -133,4 +133,5 @@
   </form>
 </body>
 </html>
+
 
